--- a/INDEX.html
+++ b/INDEX.html
@@ -61,7 +61,7 @@
    	<table width="90%" align="center"><tr>
 		<td align="center"><a href="spongebob-edited.png"><img src="1.jpg" height="250"></a></td>
    		<td align="center"><a href="Tarzan(update).png"><img src="2.jpg" height="250"></a></td>
-		<td align="center"><a href="d3m0n.png"><img src="3.jpg" height="250"></a></td>
+		<td align="center"><a href="d3m0n.png"><alt= "halloween-picture><img src="3.jpg" height="250"></a></td>
    	</tr><tr>
    		<td>Pic 1: In this piece, I edited a picture of this celebrity, Spongebob Squarepants, and made it into a filtered version of him using Adobe Photoshop.</td>
    		<td>Pic 2: In this picture, I made a pixel art of my imaginary character, and I just made his habitat the sewers, with an atomic waste barrel in the back, and my character drowned in waste.</td>
