--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<title>Jose Martinez</title>
 </head>
-<body background="1.jpg" bgcolor="blue" link="blue" alink="blue" vlink="blue">
+<body background="1.jpg" bgcolor="Alice blue" link="blue" alink="blue" vlink="blue">
 
 <!--Links at the top-->	
 	<h3 id="top" align="center"><font face="courier" size="4"><b>
