--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!--Introduction with picture-->
 	<table bgcolor="white" width="90%" align="center"><tr>
-	    <td><img src="mr-pants-with-hat.png" height="150"></td>
+	    <td><img src="book.jpeg" height="150"></td>
 	    <td><h4><font face="arial" size="4">Hello, world. I am Jose Martinez I am a high schooler graduating in 2024, looking for a job that is respectful, I’m a hustler. I love to hustle because nothing in life is given to you, and earning and working for it is what makes it worth it.</font></h4></td>
 	</tr></table><br>
 
