--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</font></h1>
    	<table width="90%" align="center"><tr>
 		<td align="center"><a href="1.jpg"><img src="spongebob-edited.png" height="250"></a></td>
-   		<td align="center"><a href="2.jpg"><img src="Tarzan(update).png" height="250"></a></td>
+   		<td align="center"><a href="2.jpg"><img src="tarzan(update).png" height="250"></a></td>
 		<td align="center"><a href="3.jpg"><img src="d3m0n.png" height="250"></a></td>
    	</tr><tr>
    		<td>Pic 1: In this piece, I edited a picture of this celebrity, Spongebob Squarepants, and made it into a filtered version of him using Adobe Photoshop.</td>
