--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 			<a href="#about">ABOUT</a>&nbsp;&nbsp;&nbsp;
 			<a href="#experience">EXPERIENCE</a>&nbsp;&nbsp;&nbsp;
 			<a href="#interests">INTERESTS</a>&nbsp;&nbsp;&nbsp;
-			<a href="[URL]">[SOCIAL]</a>&nbsp;&nbsp;&nbsp;
+			<a href="#portfolio">Visual Design Portfolio</a>&nbsp;&nbsp;&nbsp;
 			<a href="https://www.linkedin.com/in/josemartinez--/ ">LINKEDIN</a>
 	</b></font></h3><br>
 
 <!--Introduction with picture-->
 	<table bgcolor="white" width="90%" align="center"><tr>
 	    <td><img src="book.jpeg" height="150"></td>
-	    <td><h4><font face="arial" size="4">Hello, world. I am Jose Martinez I am a high schooler graduating in 2024, looking for a job that is respectful, I’m a hustler. I love to hustle because nothing in life is given to you, and earning and working for it is what makes it worth it.</font></h4></td>
+	    <td><h4><font face="arial" size="4">Hello, world. I am Jose Martinez I am a high schooler graduating in 2024, looking for a job that is respectful, I’m a hard worker. I love to work because nothing in life is given to you, and earning and working for it is what makes it worth it.</font></h4></td>
 	</tr></table><br>
 
 <!--About Me-->
